day4/00_Deployment/solution/old-canary.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment-old
  labels:
    app: canary-myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-myapp
  template:
    metadata:
      name: canary-myapp-pod
      labels:
        app: canary-myapp
        version: old
    spec:
      volumes:
      - name: nginx
        persistentVolumeClaim:
          claimName: local01
      containers:
      - name: myapp-container
        image: nginx:alpine3.18
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx
            mountPath: /usr/share/nginx/html
