day4/00_Deployment/solution/canary.service.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: canary-myapp
  ports:
  - protocol: TCP
    port: 80
